--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,8 @@ set(
 	src/Resources/Settings.hpp
 	src/Menu/InGameMenu.cpp
 	src/Menu/InGameMenu.hpp
+	src/DialogMgr.cpp
+	src/DialogMgr.hpp
 )
 
 if (WIN32)
